# wallpapers_manager

./: LICENSE  README.md  main.py  pyproject.toml  wallp.py
src/: management.py
wallpapers_manager/: __init__.py  dispatcher.py  management.py
