[tool.poetry]
name = "wallpapers-manager"
version = "0.1.0"
description = "Simple tool for renaming and converting wallpapers numerically"
authors = ["tr1angular", "<toro_75@yahoo.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "wallpapers_manager"}]

[tool.poetry.scripts]
wallp = "wallp:main"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"
natsort = "^8.2.0"
image = "^1.5.33"
Pillow = "^9.2.0"
watchdog = "^2.1.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
